# RyoikiTenaki

./: .gitignore  vs-chromium-project.txt
Sinkansoai/: CMakeLists.txt  Sinkansoai.vcxproj  Sinkansoai.vcxproj.filters  imgui.ini
Sinkansoai/Resources/Sponza/: sponza.mtl
Sinkansoai/Sources/: Algorithm.h  Component.cpp  Component.h  Definitions.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Launcher.cpp  Launcher.h  Main.cpp  Module.cpp  Module.h  ObjectBase.cpp  ObjectBase.h  ObjectGraph.h  PlatformDefinitions.h  RenderBackend.cpp  RenderBackend.h  RenderBackendCommon.h  RenderCommandList.h  SceneSelection.cpp  SceneSelection.h  Singleton.h  Timer.cpp  Timer.h  Vector.h  Windows.cpp  Windows.h  World.cpp  World.h
Sinkansoai/Sources/Engine/: Mesh.h  Texture.h
Sinkansoai/Sources/Entities/: Camera.cpp  Camera.h  EditorEntity.h  Light.h  PlaceableEntity.h
Sinkansoai/Sources/Entities/Components/: Transform.h
Sinkansoai/Sources/EntityComponent/: ComponentManger.cpp  ComponentManger.h  ECFCommon.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
Sinkansoai/Sources/Math/: SIMDMath.h
Sinkansoai/Sources/Misc/: Geometry.h  Matrix.h
Sinkansoai/Sources/Module/: MeshBuilder.cpp  MeshBuilder.h
Sinkansoai/Sources/Module/EditorUI/: EditorUI.cpp  EditorUI.h
Sinkansoai/Sources/Module/Mesh/: MeshBuilder.cpp  MeshBuilder.h  MeshBuilderGLTF.cpp  TinyObjLoader.h
Sinkansoai/Sources/Module/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h
Sinkansoai/Sources/Module/Texture/: TGALoader.h  TextureBuilder.cpp  TextureBuilder.h
Sinkansoai/Sources/Platform/: Platform.h
Sinkansoai/Sources/Platform/Android/: MainAndroid.cpp  PlatformAndroid.h
Sinkansoai/Sources/Platform/Windows/: PlatformWindows.h
Sinkansoai/Sources/Render/: MaterialRegistry.cpp  MaterialRegistry.h  Renderer.cpp  Renderer.h  Scene.h  SceneTextures.h  View.h
Sinkansoai/Sources/Render/Shaders/: Lighting.hlsl  Postprocess.hlsl  PrepassRendering.hlsl  SceneTextures.hlsl  ScreenPass.hlsl  SimpleRendering.hlsl  View.hlsl
Sinkansoai/Sources/RenderBackend/: DynamicBuffer.h  RenderBackend.cpp  RenderBackend.h  RenderBackendCommon.h  RenderBackendNull.h  RenderCommandList.cpp  RenderCommandList.h  RenderResource.h  ResourceBarrier.h  ResourceBuffer.cpp  ResourceBuffer.h  Texture.h
Sinkansoai/Sources/RenderBackend/RenderBackendCompute/: RenderBackendCompute.cpp  RenderBackendCompute.h
Sinkansoai/Sources/RenderBackend/RenderBackendD3D12/: ComputeCommandListD3D12.cpp  ComputeCommandListD3D12.h  CopyCommandListD3D12.cpp  CopyCommandListD3D12.h  DynamicBufferD3D12.cpp  DynamicBufferD3D12.h  GraphicsCommandListD3D12.cpp  GraphicsCommandListD3D12.h  MemoryScratchPad.h  RenderBackendD3D12.cpp  RenderBackendD3D12.h  RenderBackendD3D12Common.h  RenderCommandListD3D12.cpp  RenderCommandListD3D12.h  ResourceBufferD3D12.cpp  ResourceBufferD3D12.h  TextureD3D12.cpp  TextureD3D12.h
Sinkansoai/Sources/RenderBackend/RenderBackendSIMD/: RenderBackendSIMD.cpp  RenderBackendSIMD.h
Sinkansoai/Sources/RenderBackend/RenderBackendVulkan/: RenderBackendVulkan.cpp  RenderBackendVulkan.h
Sinkansoai/Sources/RenderBackendD3D12/: RenderBackendD3D12.cpp  RenderBackendD3D12.h  d3dx12.h
Sinkansoai/Sources/SceneGraphSystem/: Component.h  GraphEntity.cpp  GraphEntity.h  SceneGraphSystem.cpp  SceneGraphSystem.h
Sinkansoai/Sources/Tasks/: TaskQueue.h  TaskQueue.hpp  TaskSystem.cpp  TaskSystem.h
Sinkansoai/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
Sinkansoai/android/app/: build.gradle.kts  proguard-rules.pro
Sinkansoai/android/app/src/main/: AndroidManifest.xml
